# aither

./: .appveyor.yml  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  Makefile  README  README.md  _config.yml  about.md  blockVars.cpp  blockVars.h  boundaryConditions.cpp  boundaryConditions.h  boundaryConditions.hpp  branchDiff  delete  eos.cpp  eos.h  eos.hpp  fluxJacobian.cpp  fluxJacobian.hpp  genArray.cpp  genArray.hpp  geomSlice.cpp  geomSlice.h  gradients.cpp  gradients.hpp  index.html  index.md  input.cpp  input.h  input.hpp  inviscidFlux.cpp  inviscidFlux.h  inviscidFlux.hpp  (+49 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.sass-cache/fa86d8ce8bc288a54bed77d71df1c99a07768540/: _base.scssc  _layout.scssc  _syntax-highlighting.scssc
_includes/: disqus.html  footer.html  head.html  header.html  latex.html
_layouts/: default.html  page.html  post.html  theme.html
_posts/: 2015-11-24-compiling-aither.md  2015-11-24-introducing-aither.md  2016-01-20-version-0p1p0-released.md  2016-01-24-integrating-turbulence-part-1.md  2016-01-24-integrating-turbulence-part-2.md  2016-09-17-version-0p3p0-released.md  2016-09-25-implicit-solver-comparison.md  2016-10-15-evaluation-of-eigen.md  2016-12-04-using-travisci.md  2016-12-26-new-input-syntax.md  2017-01-29-sod-shock-tube.md  2017-03-04-couette-flow.md  2017-05-01-version-0-6-0.md  2017-05-20-thermally-perfect.md  2017-06-13-version-0-7-0.md  2017-08-27-nonreflecting-bcs.md  2018-05-21-reacting-flow.md  2018-06-15-dissociating-shock-tube.md
chemistryMechanisms/: CH4_5s2r.mch  O2_2s2r.mch
ci/appveyor/: buildAither.ps1  installMPI.ps1  runRegressionTests.ps1
ci/travis/: installMPI
include/: arrayView.hpp  blkMultiArray3d.hpp  boundaryConditions.hpp  chemistry.hpp  conserved.hpp  diffusion.hpp  eos.hpp  fluid.hpp  fluxJacobian.hpp  genArray.hpp  ghostStates.hpp  gridLevel.hpp  input.hpp  inputStates.hpp  inviscidFlux.hpp  kdtree.hpp  limiter.hpp  linearSolver.hpp  logFileManager.hpp  macros.hpp.in  matMultiArray3d.hpp  matrix.hpp  matrixView.hpp  mgSolution.hpp  multiArray3d.hpp  output.hpp  parallel.hpp  physicsModels.hpp  plot3d.hpp  primVars.hpp  primative.hpp  primitive.hpp  procBlock.hpp  range.hpp  reactions.hpp  reconstruction.hpp  resid.hpp  slices.hpp  source.hpp  spectralRadius.hpp  (+11 more)
src/: CMakeLists.txt  boundaryConditions.cpp  chemistry.cpp  conserved.cpp  diffusion.cpp  eos.cpp  fluid.cpp  fluxJacobian.cpp  genArray.cpp  ghostStates.cpp  gridLevel.cpp  input.cpp  inputStates.cpp  inviscidFlux.cpp  kdtree.cpp  limiter.cpp  linearSolver.cpp  logFileManager.cpp  main.cpp  matMultiArray3d.cpp  matrix.cpp  matrixView.cpp  mgSolution.cpp  output.cpp  parallel.cpp  plot3d.cpp  primVars.cpp  primative.cpp  primitive.cpp  procBlock.cpp  range.cpp  reactions.cpp  reconstruction.cpp  resid.cpp  slices.cpp  source.cpp  spectralRadius.cpp  thermodynamic.cpp  transport.cpp  turbulence.cpp  (+6 more)
stylesheets/: styles.css  stylesheet.css
testCases/: regressionTests.py
testCases/burner/: burner.inp  burner.xyz
testCases/convectingVortex/: convectingVortex.inp  convectingVortex.xyz
testCases/couette/: couette.inp  couette.xyz
testCases/dissociation/: dissociation.inp  dissociation.xyz
testCases/junction/: junction.inp  junction.xyz
testCases/multiblockCylinder/: multiblockCylinder.inp  multiblockCylinder.xyz
testCases/rae2822/: rae2822.inp  rae2822.xyz
testCases/shockTube/: shockTube.inp  shockTube.xyz
testCases/subsonicCylinder/: subsonicCylinder.inp  subsonicCylinder.xyz
testCases/supersonicMixing/: supersonicMixing.inp  supersonicMixing.xyz
testCases/supersonicWedge/: supersonicWedge.inp  supersonicWedge.xyz
testCases/thermallyPerfect/: thermallyPerfect.inp  thermallyPerfect.xyz
testCases/transonicBump/: transonicBump.inp  transonicBump.xyz
testCases/turbFlatPlate/: flatplate_137x97.xyz  turbFlatPlate.inp
testCases/uniformFlow/: uniformFlow.inp  uniformFlow.xyz
testCases/viscousFlatPlate/: viscousFlatPlate.inp  viscousFlatPlate.xyz
testCases/wallLaw/: wallLaw.inp  wallLaw.xyz
travis/: installMPI
